# grounded-research

./: .gitignore  .~lock.v1_Pruning_Scorecard.xlsx#  AGENTS.md  CLAUDE.md  KNOWLEDGE.md  Makefile  PROJECT.md  README.md  conftest.py  dead_code_audit.json  engine.py  meta-process.yaml  pyproject.toml  pyrightconfig.json  tyler_response_20260331.md  v1_Pruning_Scorecard.xlsx
.claude/: HANDOFF.md  handoff.yml
2026_0325_tyler_feedback/: 1. V1_Build_Plan_Step_By_Step.md  2. V1_DESIGN.md  3. V1_SCHEMAS.md  4. V1_PROMPTS.md
config/: config.openrouter.yaml  config.testing.yaml  config.yaml
docs/: ADJUDICATION_WALKTHROUGH.md  ARCHITECTURE_ONE_PAGE.md  ARTIFACTS.md  CLAUDE_CODE_HANDOFF.md  COMPETITIVE_ANALYSIS.md  CONCERNS.md  CONTRACTS.md  DOMAIN_MODEL.md  FEATURE_STATUS.md  HANDOFF_2026_03_24.md  JUDGE_CRITIQUES.md  LOCAL_INFRA_ALIGNMENT.md  MAINTAINER_START_HERE.md  METHODOLOGY.md  PLAN.md  QUESTIONS_FOR_TYLER.md  ROADMAP.md  ROADMAP_V2.md  SCOPE_MATRIX_V2.md  TECH_DEBT.md  TYLER_AUDIT_FAILURE_ANALYSIS.md  TYLER_AUDIT_QUALITY_STANDARD.md  TYLER_CROSS_REPO_HANDOFF_2026_04_14.md  TYLER_EXECUTION_STATUS.md  TYLER_FINAL_COMPLIANCE_AUDIT.md  TYLER_FROZEN_EVAL_STATUS.md  TYLER_FULL_SPEC_AUDIT_MATRIX.md  TYLER_INDEPENDENT_CLOSURE_REVIEW.md  TYLER_LITERAL_PARITY_AUDIT.md  TYLER_LITERAL_PROMPT_FIDELITY_AUDIT.md  TYLER_PROMPT_LITERALNESS_MATRIX.md  TYLER_REQUIREMENTS_COVERAGE_STATUS.md  TYLER_REQUIREMENT_REVIEW_RUBRIC.md  TYLER_SHARED_INFRA_OWNERSHIP.md  TYLER_SOURCE_MANIFEST.md  TYLER_SPEC_GAP_LEDGER.md  TYLER_SYSTEMATIC_REVIEW_MATRIX.md  TYLER_TRACEABILITY.md  TYLER_V1_CURRENT_REPO_MAP.md  TYLER_V1_DELIVERY_SUMMARY.md  (+7 more)
prompts/: analyst.yaml  arbitration.yaml  claimify.yaml  decompose.yaml  dedup.yaml  dispute_classify.yaml  extract_evidence.yaml  long_report.yaml  query_generation.yaml  source_scoring.yaml  synthesis.yaml  tyler_v1_analyst.yaml  tyler_v1_arbitration.yaml  tyler_v1_decompose.yaml  tyler_v1_extract_findings.yaml  tyler_v1_query_diversification.yaml  tyler_v1_stage4.yaml  tyler_v1_synthesis.yaml  validate_decomposition.yaml  verification_queries.yaml
scripts/: check_adr_invariants.py  check_docstrings.py  check_local_test_env.py  check_tyler_code_audit.py  check_tyler_coverage.py  check_tyler_doc_drift.py  check_tyler_doc_provenance.py  check_tyler_source_manifest.py  check_tyler_traceability.py  ci_checks.py  compare_fair.py  compare_outputs.py  eval_tyler_variants.py  generate_tyler_review_packets.py  migrate_legacy_fixture_to_tyler.py  phase_minus1.py  relationships.yaml  restore_frozen_outputs.py  run_gpt_researcher.py  run_perplexity.py  run_storm.py  single_shot_baseline.py  (+2 more)
(+281 files in other folders)
