[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grounded-research"
version = "0.1.0"
description = "Adjudication-first layer for grounded research claims"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "beautifulsoup4>=4.12",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=1.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "vulture>=2.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "data_contracts",
    "data_contracts.*",
    "epistemic_contracts",
    "epistemic_contracts.*",
    "llm_client",
    "llm_client.*",
    "open_web_retrieval",
    "open_web_retrieval.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
